--- a/ginger-mirin-eggs.html
+++ b/ginger-mirin-eggs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Ginger Mirin Scrambled Eggs</title>
