--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipees</h1>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/ginger-mirin-eggs.html">Ginger Mirin Eggs</a></li>
+            <li><a href="recipes/korean-ground-beef.html">Korean Ground Beef</a></li>
+            <li><a href="recipes/teriyaki-ground-chicken.html">Teriyaki Ground Chicken</a></li>
     </body>
 </html>
