Write recipe for egg dish and add image

--- a/recipes/ginger-mirin-eggs.html
+++ b/recipes/ginger-mirin-eggs.html
@@ -6,5 +6,25 @@
     </head>
     <body>
         <h1>Ginger Mirin Scrambled Eggs</h1>
+        <img height=400px src="https://www.allrecipes.com/thmb/Bo2n8Z8M_HZRTSFBZd7pWtbj6M8=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/272293-fluffy-microwave-scrambled-eggs-DDMFS-4x3-5b0c4f0fc5b4464e8ba1d1886667631e.jpg">
+        <h2>Description</h2>
+        <p>This delightful breakfast is slightly sweet and perfectly tangy thanks to the ginger powder.</p>
+        <p>If you want to make this into a full size meal, pair with steamed rice (white for flavor, brown for nutrition) and some pickled vegetables.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3 eggs</li>
+            <li>1 tsp soy sauce</li>
+            <li>1 tsp mirin</li>
+            <li>1 tbsp ginger powder</li>
+            <li>pinch of salt</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>Heat a nonstick pan over a burner set to medium-high.</li>
+            <li>Crack eggs into a bowl.</li>
+            <li>Whisk the soy sauce, mirin, and ginger powder into the eggs until the yolks are thoroughly mixed.</li>
+            <li>Gently pour seasoned egg mixture into the pan, and stir constantly. Be ready to plate the eggs as soon as they are cooked.</li>
+            <li>(Optional) Serve with rice and pickles.</li>
+        </ol>
     </body>
 </html>
