--- a/recipes/korean-ground-beef.html
+++ b/recipes/korean-ground-beef.html
@@ -29,6 +29,7 @@
             <li>Cook the ginger and garlic in the remaining oil.</li>
             <li>Re-add the meat to the pan, and add the seasoning mixture.</li>
             <li>Mix well and simmer for 2-3 minutes over medium-low heat.</li>
+            <li>(Optional) Serve with sesame seeds, chopped green onions, over rice</li>
         </ol>
 
 
